<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/et_top"
        android:textSize="@dimen/text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_1"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@id/et_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_2"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@id/et_top"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_3"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@id/et_top"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_addition"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@id/et_top"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_4"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_5"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_6"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_subtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_subtraction"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@id/button_addition"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_7"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_8"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@id/button_5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_9"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_multiplication"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@id/button_subtraction"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_result"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_7"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_0"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@id/button_result"
        app:layout_constraintTop_toBottomOf="@id/button_8"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_comma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_comma"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_divide"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@id/button_multiplication"
        app:layout_constraintStart_toEndOf="@id/button_comma"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>